--- a/front-end/src/components/TableX/styles.css
+++ b/front-end/src/components/TableX/styles.css
@@ -5,15 +5,22 @@ table{
     margin-top: 10px;
 }
 
+th{
+    background-color: #f6f9fc;
+}
+
 td,th{
     border-bottom:1px #dddddd solid;
     text-align: left;
-    padding: 7px;
+    padding: 5px;
+    width: 5%;
 }
 
 /* .striped:nth-child(even){
     background-color: #dddddd;
-} */
+} 
+*/
+
 .hover:hover{
     background-color: #ff9109;
 }
